[gd_scene load_steps=15 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://scripts/classes/state_machine.gd" type="Script" id=2]
[ext_resource path="res://entities/player/States/player_free.gd" type="Script" id=3]
[ext_resource path="res://entities/player/States/player_tired.gd" type="Script" id=4]
[ext_resource path="res://entities/player/player_hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/player/player_camera.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/components/trauma_area.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/player/interactCast.gd" type="Script" id=8]
[ext_resource path="res://entities/player/States/player_interacting.gd" type="Script" id=9]
[ext_resource path="res://entities/player/States/player_onAir.gd" type="Script" id=10]
[ext_resource path="res://entities/player/lanter.tscn" type="PackedScene" id=11]

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[sub_resource type="SphereShape" id=3]

[sub_resource type="CapsuleMesh" id=2]
mid_height = 2.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2.0215, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="PlayerCamera" parent="Head" instance=ExtResource( 6 )]

[node name="interactCast" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -4 )
collision_mask = 4
collide_with_areas = true
script = ExtResource( 8 )

[node name="trauma_area" parent="Head" instance=ExtResource( 7 )]
TRAUMA_AMMOUNT = 1.0

[node name="CollisionShape" type="CollisionShape" parent="Head/trauma_area"]
shape = SubResource( 3 )

[node name="lanter" parent="Head" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.821365, -0.732229, -1.35696 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.99392, 0 )
mesh = SubResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="StaminaCountDown" type="Timer" parent="."]
wait_time = 0.5

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
INIT_STATE = NodePath("Free")

[node name="Free" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Tired" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="OnAir" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Interacting" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[connection signal="player_hitted" from="." to="Head/trauma_area" method="_on_Player_player_hitted"]
[connection signal="timeout" from="StaminaCountDown" to="StateMachine/Free" method="_on_StaminaCountDown_timeout"]
[connection signal="transitioned" from="StateMachine" to="." method="_on_StateMachine_transitioned"]
